# defects-in-welds

./: .gitignore  .pre-commit-config.yaml  README.md  commands.py  dvc.yaml  pyproject.toml
.dvc/: config
configs/: main.yaml  params.yaml
data/: test.dvc  train.dvc  valid.dvc
defects_in_welds/data/: data_module.py
defects_in_welds/model/: model.py
defects_in_welds/training/: lit_module.py  run_training.py
